kubernetes/ecommerce-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
  namespace: dev
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
